# whk_ws

./: README.md
src/autonomy_demo/: CMakeLists.txt  package.xml  setup.py
src/autonomy_demo/config/: auto_dataset.yaml  uav.dae  world.rviz
src/autonomy_demo/launch/: data_collection.launch  inference.launch  inference_separate.launch  sim.launch
src/autonomy_demo/scripts/: camera_simulator.py  data_collector.py  drone_simulator.py  inference_depthseg.py  inference_navigation_policy.py  inference_node.py  inference_segmentation.py  world_generator.py
src/autonomy_demo/src/autonomy_demo/: __init__.py  camera_utils.py  obstacle_field.py  safe_navigation.py
src/autonomy_demo/tests/: test_safe_navigation.py
src/autonomy_demo/training/: README_SEPARATE_TRAINING.md  auto_dataset_generator.py  train_classifier.py  train_depth_model.py  train_navigation_policy.py  train_segmentation.py
